<resources>
    <string name="app_name">Judo Top Niveau</string>

    <string name="koka">Koka</string>
    <string name="yuko">Yuko</string>
    <string name="wazaari">Waza-ari</string>
    <string name="ippon">Ippon</string>
    <string name="score_init">0</string>

    <string name="java_ippon">IPPON</string>
    <string name="java_time">TIME</string>


    <string name="reset">Remettre à zéro</string>

    <string name="osaekomi"><u>Osaekomi</u></string>
    <string name="combat"><u>Combat</u></string>

    <string name="valider">Valider</string>

    <string name="vingt">20 secondes</string>
    <string name="quinze">15 secondes</string>
    <string name="dix">10 secondes</string>

    <string name="trente">30 secondes</string>
    <string name="quarante">40 secondes</string>
    <string name="cinquante">50 secondes</string>
    <string name="minute">1 minute</string>
    <string name="minute_dix">1 minute 10</string>
    <string name="minute_vingt">1 minute 20</string>
    <string name="minute_trente">1 minute 30</string>
    <string name="minute_quarante">1 minute 40</string>
    <string name="minute_cinquante">1 minute 50</string>
    <string name="minutes">2 minutes</string>
</resources>