<?xml version="1.0" encoding="utf-8"?>
<GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="niveau.top.judo.jtn.MainActivity"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorAccent"
    android:columnCount="2"
    android:rowCount="2">

    <!-- Red GridLayout -->
    <GridLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary"
        android:columnCount="4"
        android:rowCount="3"
        android:alignmentMode="alignBounds"

        android:layout_row="0"
        android:layout_column="0"
        android:layout_columnWeight="1"
        android:layout_rowWeight="2">

        <TextView
            android:layout_row="0"
            android:layout_column="0"
            android:layout_columnWeight="1"
            android:layout_rowWeight="1"
            android:layout_gravity="center_horizontal"

            android:text="@string/ippon"
            android:textSize="@dimen/sizeTitle"
            android:textColor="@color/colorPrimaryDark"
            android:textStyle="bold"
            />

        <TextView
            android:layout_row="0"
            android:layout_column="1"
            android:layout_columnWeight="1"
            android:layout_rowWeight="1"
            android:layout_gravity="center_horizontal"

            android:text="@string/wazaari"
            android:textSize="@dimen/sizeTitle"
            android:textColor="@color/colorPrimaryDark"
            android:textStyle="bold"
            />

        <TextView
            android:layout_row="0"
            android:layout_column="2"
            android:layout_columnWeight="1"
            android:layout_rowWeight="1"
            android:layout_gravity="center_horizontal"

            android:text="@string/yuko"
            android:textSize="@dimen/sizeTitle"
            android:textColor="@color/colorPrimaryDark"
            android:textStyle="bold"
            />

        <TextView
            android:layout_row="0"
            android:layout_column="3"
            android:layout_columnWeight="1"
            android:layout_rowWeight="1"
            android:layout_gravity="center_horizontal"

            android:text="@string/koka"
            android:textSize="@dimen/sizeTitle"
            android:textColor="@color/colorPrimaryDark"
            android:textStyle="bold"
            />

        <Button
            android:id="@+id/ippon_rouge"

            android:layout_row="1"
            android:layout_column="0"
            android:layout_columnWeight="1"
            android:layout_rowWeight="2"

            android:background="@null"
            android:text="@string/score_init"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="@dimen/sizeScore"
            android:onClick="ippon_rouge"
            />

        <Button
            android:id="@+id/wazaari_rouge"

            android:layout_row="1"
            android:layout_column="1"
            android:layout_columnWeight="1"
            android:layout_rowWeight="2"

            android:background="@null"
            android:text="@string/score_init"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="@dimen/sizeScore"
            android:onClick="wazaari_rouge"
            />

        <Button
            android:id="@+id/yuko_rouge"

            android:layout_row="1"
            android:layout_column="2"
            android:layout_columnWeight="1"
            android:layout_rowWeight="2"

            android:background="@null"
            android:text="@string/score_init"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="@dimen/sizeScore"
            android:onClick="yuko_rouge"
            />

        <Button
            android:id="@+id/koka_rouge"

            android:layout_row="1"
            android:layout_column="3"
            android:layout_columnWeight="1"
            android:layout_rowWeight="2"

            android:background="@null"
            android:text="@string/score_init"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="@dimen/sizeScore"
            android:onClick="koka_rouge"
            />

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:layout_row="2"
            android:layout_column="0"
            android:layout_columnSpan="4"
            android:layout_columnWeight="1"
            android:layout_rowWeight="1">

            <Button
                android:id="@+id/chrono_sol_red"

                android:layout_centerInParent="true"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:background="@null"
                android:onClick="setChronoSol"
                android:text="0:30"
                android:textColor="@color/colorAccent"
                android:textSize="@dimen/sizeTitle"
                />

            <ImageButton
                android:id="@+id/reset_sol_red"

                android:background="@drawable/reset"
                android:layout_width="@dimen/sizeReset"
                android:layout_height="@dimen/sizeReset"

                android:layout_margin="@dimen/margin"
                android:layout_centerVertical="true"
                android:layout_toEndOf="@id/chrono_sol_red"
                />

        </RelativeLayout>

    </GridLayout>

    <!-- White GridLayout -->
    <GridLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:columnCount="4"
        android:rowCount="3"
        android:alignmentMode="alignBounds"

        android:layout_row="0"
        android:layout_column="1"
        android:layout_columnWeight="1"
        android:layout_rowWeight="2">

        <TextView
            android:layout_row="0"
            android:layout_column="0"
            android:layout_columnWeight="1"
            android:layout_rowWeight="1"

            android:text="@string/ippon"
            android:textSize="@dimen/sizeTitle"
            android:textColor="@color/colorPrimaryDark"
            android:textStyle="bold"
            android:layout_gravity="center_horizontal"
            />

        <TextView
            android:layout_row="0"
            android:layout_column="1"
            android:layout_columnWeight="1"
            android:layout_rowWeight="1"
            android:layout_gravity="center_horizontal"

            android:text="@string/wazaari"
            android:textSize="@dimen/sizeTitle"
            android:textColor="@color/colorPrimaryDark"
            android:textStyle="bold"
            />

        <TextView
            android:layout_row="0"
            android:layout_column="2"
            android:layout_columnWeight="1"
            android:layout_rowWeight="1"
            android:layout_gravity="center_horizontal"

            android:text="@string/yuko"
            android:textSize="@dimen/sizeTitle"
            android:textColor="@color/colorPrimaryDark"
            android:textStyle="bold"
            />

        <TextView
            android:layout_row="0"
            android:layout_column="3"
            android:layout_columnWeight="1"
            android:layout_rowWeight="1"
            android:layout_gravity="center_horizontal"

            android:text="@string/koka"
            android:textSize="@dimen/sizeTitle"
            android:textColor="@color/colorPrimaryDark"
            android:textStyle="bold"
            />

        <Button
            android:id="@+id/ippon_blanc"

            android:layout_row="1"
            android:layout_column="0"
            android:layout_columnWeight="1"
            android:layout_rowWeight="2"

            android:background="@null"
            android:text="@string/score_init"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="@dimen/sizeScore"
            android:onClick="ippon_blanc"
            />

        <Button
            android:id="@+id/wazaari_blanc"

            android:layout_row="1"
            android:layout_column="1"
            android:layout_columnWeight="1"
            android:layout_rowWeight="2"

            android:background="@null"
            android:text="@string/score_init"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="@dimen/sizeScore"
            android:onClick="wazaari_blanc"
            />

        <Button
            android:id="@+id/yuko_blanc"

            android:layout_row="1"
            android:layout_column="2"
            android:layout_columnWeight="1"
            android:layout_rowWeight="2"

            android:background="@null"
            android:text="@string/score_init"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="@dimen/sizeScore"
            android:onClick="yuko_blanc"
            />

        <Button
            android:id="@+id/koka_blanc"

            android:layout_row="1"
            android:layout_column="3"
            android:layout_columnWeight="1"
            android:layout_rowWeight="2"

            android:background="@null"
            android:text="@string/score_init"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="@dimen/sizeScore"
            android:onClick="koka_blanc"
            />

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:layout_row="2"
            android:layout_column="0"
            android:layout_columnSpan="4"
            android:layout_columnWeight="1"
            android:layout_rowWeight="1">

            <Button
                android:id="@+id/chrono_sol_white"

                android:layout_centerInParent="true"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:background="@null"
                android:onClick="setChronoSol"
                android:text="0:30"
                android:textColor="@color/colorAccent"
                android:textSize="@dimen/sizeTitle"
                />

            <ImageButton
                android:id="@+id/reset_sol_white"

                android:background="@drawable/reset"
                android:layout_width="@dimen/sizeReset"
                android:layout_height="@dimen/sizeReset"

                android:layout_margin="@dimen/margin"
                android:layout_centerVertical="true"
                android:layout_toEndOf="@id/chrono_sol_white"
                />

        </RelativeLayout>

    </GridLayout>

    <!-- Bottom Layout -->
    <RelativeLayout

        android:background="@color/colorAccent"

        android:layout_row="1"
        android:layout_column="0"
        android:layout_columnSpan="2"
        android:layout_columnWeight="1"
        android:layout_rowWeight="0.5">

        <Button
            android:id="@+id/chrono_general"

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"

            android:background="@null"
            android:text="1:00"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="@dimen/sizeScore"
            android:onClick="setChronoGeneral"
            />

        <ImageButton
            android:id="@+id/plus_ou_moins"
            android:layout_width="80sp"
            android:layout_height="80sp"
            android:layout_alignParentStart="true"
            android:background="@drawable/minus"
            android:layout_centerVertical="true"
            android:layout_margin="@dimen/margin"
            android:onClick="changePlusOuMoins"
            />

        <ImageButton
            android:id="@+id/param"
            android:layout_width="80sp"
            android:layout_height="80sp"

            android:layout_centerVertical="true"
            android:layout_toRightOf="@id/plus_ou_moins"
            android:background="@drawable/params"
            android:layout_margin="@dimen/margin"
            android:onClick="goToParam"
            />

    </RelativeLayout>

</GridLayout>
